--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>hello world!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Git Demo</title>
+</head>
+<body>
+	<h1>hello world!</h1>
+	<main>
+		<h2>Main Section</h2>
+		<section>
+			<p>see below</p>
+		</section>
+	</main>
+	
+</body>
+</html>
